--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>hello</h1>
     </header>
     .....///navbar bana///....
+    aache se karna sara kam.
     <footer>
         About our website
     </footer>
